# alauda-jira-mcp

./: .gitignore  README.md  pyproject.toml
src/alauda_jira_mcp/: __init__.py  server.py
